# pose_video_comparing

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: compare_videos.py  extract_reference.py
src/pose_eval/: __init__.py
src/pose_eval/backends/: mediapipe_backend.py
src/pose_eval/core/: dtw.py  metrics.py  normalize.py  tips.py
src/pose_eval/io/: exports.py  video_io.py
src/pose_eval/viz/: draw.py  overlay.py
